# python-adk-mcp-uv-template

./: .env.example  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PULL_REQUEST_TEMPLATE.md  README.md  config.yaml  mkdocs.yml  pyproject.toml  template_github_PULL_REQUEST_TEMPLATE.md  tox.ini
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/pull_request_template/: bug_fix.md  feature.md
.github/workflows/: main.yml  on-release-main.yml  validate-codecov-config.yml
docs/: adk_guide.md  configuration.md  index.md  mcp_guide.md  modules.md
src/python_adk_mcp_uv_template/: __init__.py  agent.py  mcp_client.py
tests/: conftest.py  test_agent.py
